--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
+    "axios": "^0.27.2",
+    "editorconfig": "^0.15.3",
+    "lodash": "^4.17.21",
     "mobx": "^6.6.0",
     "mobx-react-lite": "^3.4.0",
     "mobx-state-tree": "^5.1.5",
     "react": "17.0.2",
     "react-native": "0.68.2",
     "react-native-gesture-handler": "^2.4.2",
-    "react-native-safe-area-context": "^4.2.5"
+    "react-native-safe-area-context": "^4.2.5",
+    "react-native-snackbar": "^2.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
