--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "pod": "cd ios && pod install && cd ../"
   },
   "dependencies": {
+    "@react-native-community/netinfo": "^9.0.0",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
     "axios": "^0.27.2",
