environment setup for app done

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -4,11 +4,21 @@ require_relative '../node_modules/@react-native-community/cli-platform-ios/nativ
 platform :ios, '11.0'
 install! 'cocoapods', :deterministic_uuids => false
 
+project 'myApp',{
+  'DebugDev' => :debug,
+  'DebugStaging' => :debug,
+  'DebugProd' => :debug,
+  'ReleaseDev' => :release,
+  'ReleaseStaging' => :release,
+  'ReleaseProd' => :release,
+}
+
 target 'MyFlickerApp' do
   config = use_native_modules!
 
   # Flags change depending on the env values.
   flags = get_default_flags()
+  debugs =['DebugDev','DebugStaging','DebugProd']
 
   use_react_native!(
     :path => config[:reactNativePath],
@@ -28,7 +38,8 @@ target 'MyFlickerApp' do
   #
   # Note that if you have use_frameworks! enabled, Flipper will not work and
   # you should disable the next line.
-  use_flipper!()
+  use_flipper!(configurations: debugs)
+  # use_flipper!()
 
   post_install do |installer|
     react_native_post_install(installer)
