--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -243,6 +243,21 @@ android {
         }
     }
 
+    flavorDimensions "env"
+    productFlavors {
+        staging {
+            resValue "string", "app_name", "MyFlickrApp Stag"
+            applicationIdSuffix ".stag"
+        }
+        dev {
+            resValue "string", "app_name", "MyFlickrApp Dev"
+            applicationIdSuffix ".dev"
+        }
+        prod {
+            resValue "string", "app_name", "MyFlickrApp"
+        }
+    } 
+
     // applicationVariants are e.g. debug, release
     applicationVariants.all { variant ->
         variant.outputs.each { output ->
