--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "private": true,
   "scripts": {
     "android": "react-native run-android",
+    "android-dev": "react-native run-android --variant=devDebug",
+    "android-stag": "react-native run-android --variant=stagDebug",
+    "android-prod": "react-native run-android --variant=prodDebug",
     "ios": "react-native run-ios",
+    "ios-dev": "react-native run-ios — scheme MyFlickerApp Dev — configuration DebugDev",
+    "ios-stag": "react-native run-ios — scheme MyFlickerApp Stag — configuration DebugStaging",
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
