--- a/package.json
+++ b/package.json
@@ -3,17 +3,15 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "android": "react-native run-android",
-    "android-release": "react-native run-android --variant=release",
-    "android-dev": "react-native run-android --variant=devDebug",
-    "android-stag": "react-native run-android --variant=stagDebug",
-    "android-prod": "react-native run-android --variant=prodDebug",
-    "android-dev-rel": "react-native run-android --variant=devRelease",
-    "android-stag-rel": "react-native run-android --variant=stagRelease",
-    "android-prod-rel": "react-native run-android --variant=prodRelease",
-    "ios": "react-native run-ios",
-    "ios-dev": "react-native run-ios — scheme MyFlickerApp Dev — configuration DebugDev",
-    "ios-stag": "react-native run-ios — scheme MyFlickerApp Stag — configuration DebugStaging",
+    "android:staging": "react-native run-android --variant=stagingdebug",
+    "android:staging-release": "react-native run-android --variant=stagingrelease",
+    "android:dev": "react-native run-android --variant=developmentdebug",
+    "android:dev-release": "react-native run-android --variant=developmentrelease",
+    "android:prod": "react-native run-android --variant=productiondebug",
+    "android:prod-release": "react-native run-android --variant=productionrelease",
+    "ios:dev": "react-native run-ios --scheme MyFlickerAppDev --configuration DebugDevelopment",
+    "ios:prod": "react-native run-ios --scheme MyFlickerAppProd --configuration DebugProduction",
+    "ios:staging": "react-native run-ios --scheme MyFlickerAppStag --configuration DebugStaging",
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
@@ -31,6 +29,7 @@
     "mobx-state-tree": "^5.1.5",
     "react": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-config": "^1.4.6",
     "react-native-gesture-handler": "^2.4.2",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-snackbar": "^2.4.0"
