--- a/ios/Podfile
+++ b/ios/Podfile
@@ -38,7 +38,7 @@ target 'MyFlickerApp' do
   #
   # Note that if you have use_frameworks! enabled, Flipper will not work and
   # you should disable the next line.
-  use_flipper!({ 'Flipper' => '0.135.0' }, configurations: debugs)
+  use_flipper!({ 'Flipper' => '0.99.0' })
   # use_flipper!()
 
   post_install do |installer|
