--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.67.0",
     "prettier": "^2.6.2",
+    "react-native-flipper": "^0.151.0",
     "react-test-renderer": "17.0.2",
     "typescript": "^4.4.4"
   },
